[package]
name = "multitd"
version = "0.1.0"
edition = "2021"

[dependencies]

bevy = { version = "0.16", features = [
    "bevy_dev_tools",
    "bevy_remote",
    "trace",
] }
bevy-inspector-egui = "0.31.0"
leafwing-input-manager = "0.17.0"
rand = "0.9.1"
rand_chacha = "0.9.0"
simple-easing = "1.0.1"


[profile.dev.package."*"]
opt-level = 3

[profile.release]
debug = true
