[package]
name = "multitd"
version = "0.1.0"
edition = "2021"

[dependencies]

bevy = { version = "0.19.0", features = [
    "bevy_dev_tools",
    "bevy_remote",
    "trace",
] }
bevy-inspector-egui = "0.37.0"
leafwing-input-manager = "0.21.0"
rand = "0.10.1"
rand_chacha = "0.10.0"
simple-easing = "1.0.2"


[profile.dev.package."*"]
opt-level = 3

[profile.release]
debug = true
